[package]
name = "dumpy"
version = "0.5.0-dev.0"
edition = "2021"
authors = ["Jason Ish <jason@codemonkey.net>"]
homepage = "https://github.com/jasonish/dumpy"
license = "MIT"
description = "A web frontend to Suricata full packet capture"

[dependencies]
anyhow = "1.0.57"
axum = { version = "0.7", default-features = false, features = ["json", "form", "query"] }
axum-server = { version = "0.6.0", default-features = false, features = ["tls-rustls"] }
base64 = { version = "0.13.0", default-features = false }
bcrypt = { version = "0.13.0", default-features = false, features = ["std"] }
clap = { version = "4.5.4", default-features = false, features = ["std", "derive", "color", "help", "usage"] }
futures-util = { version = "0.3.21", default-features = false }
lazy_static = "1.4.0"
mime_guess = { version = "2.0.4", default-features = false }
pcap = { version = "2.0.0", default-features = false }
regex = { version = "1.5.5", default-features = true }
rust-embed = { version = "6.4.0", default-features = false }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.80", default-features = false, features = [] }
serde_yaml = { version = "0.9.34", default-features = false, features = [] }
thiserror = "1.0.30"
time = { version = "0.3.9", default-features = false, features = ["parsing", "local-offset", "macros"] }
tokio = { version = "1.18.1", default-features = false, features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = { version = "0.1.8", default-features = false, features = [] }
tokio-util = { version = "0.7.1", default-features = false, features = ["io"] }
tracing = { version = "0.1.34", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.6", default-features = false, features = ["json", "fmt", "ansi", "time"] }
