[package]
name = "dumpy"
version = "0.5.2"
edition = "2021"
authors = ["Jason Ish <jason@codemonkey.net>"]
repository = "https://github.com/jasonish/dumpy"
license = "MIT"
description = "A web frontend to Suricata full packet capture"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", default-features = false, features = ["json", "form", "query"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls"] }
base64 = { version = "0.22.1", default-features = false }
bcrypt = { version = "0.19.0", default-features = false, features = ["std"] }
clap = { version = "4.6.0", default-features = false, features = ["std", "derive", "color", "help", "usage"] }
futures-util = { version = "0.3.32", default-features = false }
lazy_static = "1.5.0"
mime_guess = { version = "2.0.5", default-features = false }
pcap = { version = "2.4.0", default-features = false }
regex = { version = "1.12.3", default-features = true }
rust-embed = { version = "8.11.0", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [] }
serde_yaml = { version = "0.9.34", default-features = false, features = [] }
thiserror = "2.0.18"
time = { version = "0.3.47", default-features = false, features = ["parsing", "local-offset", "macros"] }
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt-multi-thread", "full"] }
tokio-stream = { version = "0.1.18", default-features = false, features = [] }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
tracing = { version = "0.1.44", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["json", "fmt", "ansi", "time"] }
